HelloWord/force-app/main/default/objects/Candidate_Atul__c/Candidate_Atul__c.object-meta.xml
<CustomObject>
    <label>Candidate_Atul</label>
    <nameField>
        <label>Candidate_AtulR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate_Atuls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>