HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>FLOOR((TODAY() -  Date_of_Birth__c )/365.2425)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>