HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
                <color>#0B6FCE</color>
                <label>Australia</label>
            </value>
            <value>
                <fullName>India</fullName>
                <color>#78C953</color>
                <label>India</label>
            </value>
            <value>
                <fullName>Belgium</fullName>
                <color>#E27001</color>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>Switzerland</fullName>
                <color>#A845DC</color>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>States</fullName>
                <color>#F3D904</color>
                <label>States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>