HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>date</description>
    <label>DOB</label>
    <type>Date</type>
</CustomField>