HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary__c</fullName>
    <description>aa</description>
    <label>Expected Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>