HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job_Atul</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Job_Atul__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Atul__c</referenceTo>
    <relationshipLabel>Candidate_Atuls</relationshipLabel>
    <relationshipName>Candidate_Atuls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>