HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0157F000000wQsI&quot;, &quot;Red&quot;)</formula>
    <label>Picture</label>
    <type>Text</type>
</CustomField>