HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
                <color>#CC33CC</color>
                <default>true</default>
                <label>Mr</label>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>