HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/selectedDate__c.field-meta.xml
<CustomField>
    <fullName>selectedDate__c</fullName>
    <formula>IF(ISPICKVAL( Status__c , &quot;Hired&quot;),  TODAY() , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>selectedDate</label>
    <type>Date</type>
</CustomField>