HelloWord/force-app/main/default/objects/Candidate_Atul__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Christmas Island</fullName>
            </value>
            <value>
                <fullName>Norfolk Island</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Andra Pradesh</fullName>
            </value>
            <value>
                <fullName>Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Limburg</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Brabant Wallon</fullName>
            </value>
            <value>
                <fullName>Liege</fullName>
            </value>
            <value>
                <fullName>Hainaut</fullName>
            </value>
            <value>
                <fullName>Glarus</fullName>
            </value>
            <value>
                <fullName>Aargau</fullName>
            </value>
            <value>
                <fullName>Ticino</fullName>
            </value>
            <value>
                <fullName>Bern</fullName>
            </value>
            <value>
                <fullName>Zug</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>